--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,9 @@
         "src": "/(.*)",
         "dest": "/index.html"
       }
+    ],
+    "rewrites": [
+      { "source": "/(.*)", "destination": "/index.html" }
     ]
   }
   
